WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92245
[EFL][WK2] Fix timeout issues when debugging WebProcess.
https://bugs.webkit.org/show_bug.cgi?id=92245
Summary
[EFL][WK2] Fix timeout issues when debugging WebProcess.
Chris Dumez
Reported
2012-07-25 06:48:11 PDT
We added a mechanism to facilitate the debugging of the WebProcess in
Bug 90768
. However, when running the WebProcess in gdb or valgrind using the --webprocess-cmd-prefix argument to run-webkit-tests, it is quite common that the WebProcess is detected as not being responsive or that the test timeout because it runs much more slowly under gdb/valgrind. We need to address this issue.
Attachments
Patch
(2.09 KB, patch)
2012-07-25 06:49 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-07-25 06:49:55 PDT
Created
attachment 154340
[details]
Patch
WebKit Review Bot
Comment 2
2012-07-25 12:10:35 PDT
Comment on
attachment 154340
[details]
Patch Clearing flags on attachment: 154340 Committed
r123643
: <
http://trac.webkit.org/changeset/123643
>
WebKit Review Bot
Comment 3
2012-07-25 12:10:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug