[EFL][WK2] Fix timeout issues when debugging WebProcess. https://bugs.webkit.org/show_bug.cgi?id=92245

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-07-25
Reviewed by Dirk Pranke.

Fix timeout issues when debugging the WebProcess
under valgrind or gdb.

* Scripts/webkitpy/layout_tests/port/efl.py:
(EflPort.default_timeout_ms):
* WebKitTestRunner/efl/TestControllerEfl.cpp:
(WTR::TestController::platformInitialize):

Canonical link: https://commits.webkit.org/110083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123643 268f45cc-cd09-0410-ab3c-d52691b4dbfc